feat: complete development pick management
